--- a/style/style.css
+++ b/style/style.css
@@ -94,8 +94,9 @@ main{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.438);
 }
 
-div.video iframe{
+.video iframe{
     position: absolute;
+    height: 90%;
     top: 5%;
     left: 5%;
     width: 90%;
