--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @font-face {
-    font-family: "Android" ;
-    src: url("/pacote-projeto-d010/fontes/idroid.otf") format("opentype");
+    font-family: "android";
+    src: url("/fontes/idroid.otf") format("opentype");
     font-weight: normal;
 }
 
